Possible fix for #677399 - I've changed the width to 716px, so that the text aligns with the fire fox logo; centering would be difficult for all languages (would likely require javascript). Hopefully this is 'good enough'

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -181,8 +181,8 @@ h3 {
 
 #header .nav {
   list-style-type: none;
-  width: 455px;
-  margin: 10px auto;
+  width:           716px;
+  margin:          10px auto;
 }
 
 #header .nav li {
